# krossgen

./: .gitignore  ChangeLog  Makefile.am  README.md  configure.ac
inspiration/: note.txt
inspiration/webserver_utils/etc/webserver_utils/: webserver.conf
inspiration/webserver_utils/etc/webserver_utils/include/: functions.sh
inspiration/webserver_utils/etc/webserver_utils/templates/: php7.4-pool.conf
src/: Makefile.am  srvcfg.c
src/inspiration/webserver_utils/etc/webserver_utils/include/: functions.sh
src/inspiration/webserver_utils/etc/webserver_utils/templates/: nginx.conf
