AC_PREREQ([2.71])
AC_INIT([srvcfg], [0.1], [bugs@kara-online.net])

#build host
AC_CANONICAL_HOST

#autoconf stuff
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_CONFIG_SRCDIR([src/])
AC_CONFIG_HEADERS([config.h])

#program config
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

#user and host info
# none

#headers
# none

#types
# none

#functions
# none

#makefiles
AC_CONFIG_FILES([
  Makefile
  src/Makefile
])
AC_OUTPUT
